# ricedq

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/weights/: click_item.rs  mod.rs  msg_edit.rs  no_icon_header.rs
